create login page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,9 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  /* add a linear gradient background color with colors blue and red */
+  background: linear-gradient(to right, #086591, #DC143C);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
